# movement

./: .gitignore  env32.sh  pyproject.toml
movement/: __init__.py  gpio.py  led.py  motor.py  pin_definition.py
movement/restapi/: __init__.py  __main__.py  camera.py  motor.py  secrets.py
test/: led.py  motor.py
