[project]
name = "movement"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.9.19"
dependencies = [
    "fastapi>=0.124.0",
    "mock-gpio>=0.2.0 ; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "rpi-gpio>=0.7.1 ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
