[project]
name = "movement"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "av>=15.1.0",
    "fastapi>=0.124.0",
    "mock-gpio>=0.2.0 ; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "opencv-python>=4.12.0.88",
    "rpi-gpio>=0.7.1 ; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
